--- a/Company.G03.PL/appsettings.Development.json
+++ b/Company.G03.PL/appsettings.Development.json
@@ -4,5 +4,11 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.;Database=CompanyG03; Trusted_Connection=True; TrustServerCertificate= True;"
+  },
+
+  "AllowedHosts": "*"
 }
