--- a/Company.G03.PL/appsettings.Development.json
+++ b/Company.G03.PL/appsettings.Development.json
@@ -7,7 +7,7 @@
   },
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=CompanyG03; Trusted_Connection=True; TrustServerCertificate= True;"
+    "DefaultConnection": "Server=.;Database=CompanyG03; Trusted_Connection=True; TrustServerCertificate= True; MultipleActiveResultSets=True;"
   },
 
   "AllowedHosts": "*"
