--- a/Company.G03.PL/appsettings.json
+++ b/Company.G03.PL/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.;Database=CompanyG03; Trusted_Connection=True; TrustServerCertificate= True; MultipleActiveResultSets=True;"
+  },
+
   "AllowedHosts": "*"
 }
