--- a/Company.G03.PL/appsettings.json
+++ b/Company.G03.PL/appsettings.json
@@ -6,8 +6,37 @@
     }
   },
 
+  //"ConnectionStrings": {
+  //  "DefaultConnection": "Server=.;Database=CompanyG03; Trusted_Connection=True; TrustServerCertificate= True; MultipleActiveResultSets=True;"
+  //},
+
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=CompanyG03; Trusted_Connection=True; TrustServerCertificate= True; MultipleActiveResultSets=True;"
+    "DefaultConnection": "Server=db16322.public.databaseasp.net; Database=db16322; User Id=db16322; Password=z%7B9fE#_L4a; Encrypt=False; MultipleActiveResultSets=True;"
+  },
+
+  "EmailSettings": {
+    "Email": "ahmedh.emam99@gmail.com",
+    "DisplayName": "Ahmed H. Emam",
+    "Password": "xqyaiqohmvjohwhd",
+    "Host": "smtp.gmail.com",
+    "Port": "587"
+  },
+
+  "TwilioSettings": {
+    "AccountSid": "ACa6b578f91a6f653d8c79f5cab5ac62a1",
+    "AuthToken": "3c40d2b283ca0e4fab42127924d93d3a",
+    "PhoneNumber": "+18126377504"
+  },
+
+  "Auth": {
+    "Google": {
+      "ClientId": "1015639303850-80g04sq4rdpgju0kef4l105tp747nesr.apps.googleusercontent.com",
+      "ClientSecret": "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"
+    },
+    "Facebook": {
+      "ClientId": "3986103414998295",
+      "ClientSecret": "42477976387f9c322f34d17fc3fe7a4a"
+    }
   },
 
   "AllowedHosts": "*"
